crates/cyrus-core/tests/ui/fail/escape_brand.stderr
error: lifetime may not live long enough
  --> tests/ui/fail/escape_brand.rs:12:53
   |
12 |     let escaped: Brand<'_> = dim.with_brand(|brand| brand);
   |                                              ------ ^^^^^ returning this value requires that `'1` must outlive `'2`
   |                                              |    |
   |                                              |    return type of closure is Brand<'2>
   |                                              has type `Brand<'1>`
   |
   = note: requirement occurs because of the type `Brand<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Brand<'id>` is invariant over the parameter `'id`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
